assignment1/code/gmake.log
gmake --no-print-directory deps
g++ -std=gnu++2a -MM -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never ubigint.cpp bigint.cpp libfns.cpp scanner.cpp debug.cpp util.cpp main.cpp >>Makefile.deps
checksource ubigint.cpp
checksource: TOTAL COMPLAINTS: 0
cpplint.py.perl ubigint.cpp
Done processing ubigint.cpp
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c ubigint.cpp
ubigint.cpp: In member function ‘ubigint ubigint::operator+(const ubigint&) const’:
ubigint.cpp:58:12: warning: variable ‘shorter’ set but not used [-Wunused-but-set-variable]
    ssize_t shorter;
            ^~~~~~~
ubigint.cpp:60:9: warning: unused variable ‘thisislonger’ [-Wunused-variable]
    bool thisislonger = true;
         ^~~~~~~~~~~~
checksource bigint.cpp
checksource: TOTAL COMPLAINTS: 0
cpplint.py.perl bigint.cpp
Done processing bigint.cpp
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c bigint.cpp
checksource libfns.cpp
checksource: TOTAL COMPLAINTS: 0
cpplint.py.perl libfns.cpp
Done processing libfns.cpp
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c libfns.cpp
checksource scanner.cpp
checksource: TOTAL COMPLAINTS: 0
cpplint.py.perl scanner.cpp
Done processing scanner.cpp
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c scanner.cpp
checksource debug.cpp
checksource: TOTAL COMPLAINTS: 0
cpplint.py.perl debug.cpp
Done processing debug.cpp
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c debug.cpp
checksource util.cpp
checksource: non-ASCII character \x09 = ^I (tab)
util.cpp: 2 errors: lines 10--11
checksource: TOTAL COMPLAINTS: 2
gmake: [Makefile:31: util.o] Error 1 (ignored)
cpplint.py.perl util.cpp
util.cpp:10:  Tab found; better to use spaces  [whitespace/tab] [1]
util.cpp:11:  Tab found; better to use spaces  [whitespace/tab] [1]
Done processing util.cpp
Total errors found: 2
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c util.cpp
checksource main.cpp
checksource: TOTAL COMPLAINTS: 0
cpplint.py.perl main.cpp
Done processing main.cpp
g++ -std=gnu++2a -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c main.cpp
main.cpp:61:39: error: expected ‘,’ or ‘...’ before ‘t’
 void do_print (bigint_stack& stackcat t const char) {
                                       ^
main.cpp: In function ‘void do_print(bigint_stack&)’:
main.cpp:62:8: error: ‘stack’ was not declared in this scope
    if (stack.size() < 1) throw ydc_error ("stack empty");
        ^~~~~
main.cpp:62:8: note: ‘std::stack’ is defined in header ‘<stack>’; did you forget to ‘#include <stack>’?
main.cpp:19:1:
+#include <stack>
 
main.cpp:62:8:
    if (stack.size() < 1) throw ydc_error ("stack empty");
        ^~~~~
main.cpp:63:12: error: ‘stack’ was not declared in this scope
    cout << stack.top() << endl;
            ^~~~~
main.cpp:63:12: note: ‘std::stack’ is defined in header ‘<stack>’; did you forget to ‘#include <stack>’?
main.cpp:61:30: warning: unused parameter ‘stackcat’ [-Wunused-parameter]
 void do_print (bigint_stack& stackcat t const char) {
                ~~~~~~~~~~~~~~^~~~~~~~
main.cpp: In function ‘void do_function(bigint_stack&, char)’:
main.cpp:95:41: error: too many arguments to function ‘void do_print(bigint_stack&)’
       case 'p': do_print    (stack, oper); break;
                                         ^
main.cpp:61:6: note: declared here
 void do_print (bigint_stack& stackcat t const char) {
      ^~~~~~~~
gmake: *** [Makefile:33: main.o] Error 1
